--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/NirmalVG/cartique-ecommerce-mern#readme",
     "dependencies": {
+        "dotenv": "^16.0.1",
         "express": "^4.18.1"
     },
     "devDependencies": {
